# onevpl-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
examples/: decode_file.rs  decode_file_h264.rs  decode_file_hw.rs  decode_file_hw_422.rs  decode_file_hw_legacy.rs  encode_file.md  encode_file.rs  encode_file_hw.rs  encode_file_hw_bgra.rs  encode_file_hw_bgra_422.rs  encode_file_hw_bgra_444.rs  frame_allocator.rs  vpp_file.rs
intel-onevpl-sys/: Cargo.toml  build.rs
intel-onevpl-sys/src/: lib.rs
src/: bitstream.rs  callback_future.rs  constants.rs  frameallocator.rs  lib.rs  tests.rs  utils.rs  videoparams.rs
src/decode/: mod.rs
src/encode/: mod.rs
src/vpp/: mod.rs
tests/: frozen.h264  frozen.hevc  frozen1080.hevc  frozen180.bgra
