[package]
name = "onevpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
once_cell = "1.17.1"
intel-onevpl-sys = { version = "0.1.0", path = "intel-onevpl-sys" }
libloading = "0.7.4"
tracing = "0.1.37"
bitflags = "1.3.2"
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }
enum-repr = "0.2.6"

[target.'cfg(unix)'.dependencies]
libva-sys = "0.1.2"

[workspace]
members = ["intel-onevpl-sys"]

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = "0.3.16"
tracing-test = "0.2.4"
sha2 = "0.10.6"
hex-literal = "0.4.1"
